# phishing-detection

./: .gitignore  LICENSE  Makefile  README.md  analysis_report.csv  pyproject.toml  requirements.txt  seccomp_profile.json  setup.cfg
src/phishing_detection/: __init__.py  analysis_report.py  cli.py  settings.py  tasks.py
src/phishing_detection/connectors/: domains_source.py  google_safe_browsing.py  safe_browsing_response.proto  safe_browsing_response_pb2.py  virus_total.py  website_status.py
src/phishing_detection/data/playwright_chrome_profile/: Local State
src/phishing_detection/data/playwright_chrome_profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Safe Browsing Cookies  Secure Preferences  Top Sites  TransportSecurity  Visited Links  Web Data
src/phishing_detection/data/playwright_chrome_profile/Default/DawnGraphiteCache/: data_1  index
src/phishing_detection/data/playwright_chrome_profile/Default/DawnWebGPUCache/: data_1  index
src/phishing_detection/data/playwright_chrome_profile/Default/Extension Rules/: LOG
src/phishing_detection/data/playwright_chrome_profile/Default/Extension Scripts/: LOG
src/phishing_detection/data/playwright_chrome_profile/Default/Extension State/: LOG
src/phishing_detection/data/playwright_chrome_profile/Default/GPUCache/: data_0  data_1  data_2  index
src/phishing_detection/data/playwright_chrome_profile/Default/Session Storage/: LOG
src/phishing_detection/data/playwright_chrome_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  (+82 more)
src/phishing_detection/data/playwright_chrome_profile/GraphiteDawnCache/: data_1  index
src/phishing_detection/data/playwright_chrome_profile/ShaderCache/: data_1  index
src/phishing_detection/data/playwright_chrome_profile/segmentation_platform/: ukm_db-wal
src/phishing_detection/domain/: models.py  services.py
tests/: test_safe_browsing.py
(+1522 files in other folders)
